--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         with:
           enablement: true
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --force
       - name: Build
         run: npm run build
       - name: Upload artifact
